--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,31 +61,6 @@ button {
 
 
 
-#modal-avatar {
-  width: 50px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
-  border: 2px solid #ecf0f1;
-  position: absolute;
-  right: 15px;
-  top: 20px;
-  z-index: 99999;
-}
-
-.nuevo-mensaje {
-  margin-top: 6em;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.nuevo-mensaje div{
-  display: inline;
-  float: left;
-}
-
 .div-img {
   width: 60px;
 }
@@ -100,156 +75,7 @@ button {
   z-index: 9999;
 }
 
-textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  
-  font-size: 18px;
-  padding: 10px;
 
-  width: 100%;
-  resize: none;
-  outline: none !important;
-  border-radius: 5px;
-  border: 0px;
-}
-
-.fab {
-  width: 70px;
-  height: 70px;
-  background-color: #3498db;
-  border-radius: 50%;
-  box-shadow: 0 2px 6px 0 #666;
-  transition: all 0.1s ease-in-out;
-
-  font-size: 30px;
-  color: white;
-  text-align: center;
-  line-height: 70px;
-
-  position: fixed;
-  right: 20px;
-  bottom: 50px;
-}
-
-.fab-marker {
-  width: 50px;
-  height: 50px;
-  background-color: #00ac09;
-  border-radius: 50%;
-  box-shadow: 0 2px 6px 0 #666;
-  transition: all 0.1s ease-in-out;
-
-  font-size: 20px;
-  color: white;
-  text-align: center;
-  line-height: 55px;
-
-  position: fixed;
-  left: 20px;
-  bottom: 50px;
-}
-
-.fab-photo {
-  width: 50px;
-  height: 50px;
-  background-color: #470494;
-  border-radius: 50%;
-  box-shadow: 0 2px 6px 0 #666;
-  transition: all 0.1s ease-in-out;
-
-  font-size: 20px;
-  color: white;
-  text-align: center;
-  line-height: 55px;
-
-  position: fixed;
-  left: 80px;
-  bottom: 50px;
-}
-
-
-
-  .bubble {
-    width: 100%;
-    padding: .5em 1em;
-    line-height: 1.4em;
-    padding: 20px;
-    background-color: #ecf0f1;
-    position: relative;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
-    border-radius: 8px;
-    text-align: left;
-    display: inline-block; 
-  }
-    .bubble:hover > .over-bubble {
-      opacity: 1; 
-    }
-  
-  .bubble-container {
-    width: 75%;
-    display: block;
-    position: relative;
-    padding-left: 20px;
-    vertical-align: top;
-    display: inline-block; }
-  
-  .arrow {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 10px;
-    top: 10%;
-    height: 0;
-    width: 0;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-right: 20px solid #ecf0f1; }
-  
-  .timeline {
-    margin-top: 6em;
-    width: 100%;
-    display: block;
-    list-style-type: none;
-    background-color: #dde1e2;
-    padding-bottom: 2em;
-    padding-left: 0px;
-    margin-bottom: 2em; 
-  }
-    .timeline li {
-      padding: 1em 0; 
-    }
-    .timeline li:nth-child(even) {
-      background-color: #d3d7d8; 
-    }
-  
-  .avatar {
-    width: 18%;
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
-    overflow: hidden;
-    margin-left: 2%; 
-  }
-
-    .avatar img {
-      width: 100%;
-      -webkit-border-radius: 50%;
-      -moz-border-radius: 50%;
-      -ms-border-radius: 50%;
-      -o-border-radius: 50%;
-      border-radius: 50%;
-      border: 5px solid #ecf0f1;
-      position: relative; 
-    }
-    .avatar:hover > .hover {
-      cursor: pointer;
-      opacity: 1; }
-  
 
   .first {
     width: 100%;
@@ -259,7 +85,7 @@ textarea {
     top: 0px;
 
     margin: auto;
-    background-color: #3498db;
+    background-color: #64b126;
     text-shadow: #2084c7 1px 1px 0;
     padding: 1em 0 !important;
     color: white;
@@ -409,7 +235,7 @@ and (-webkit-device-pixel-ratio : 3) {
     transition-timing-function: ease; }
     .icon-mail-reply:hover {
       cursor: pointer;
-      color: #3498db; }
+      color: #64b126; }
   
   h3 {
     font-size: 1.2em;
